- fix oversized image on small screens - fix transition on changing pages - fix base url of route

--- a/src/style.css
+++ b/src/style.css
@@ -33,3 +33,13 @@ nav a.router-link-exact-active {
 .secondary-desc {
 	@apply font-medium text-secondary;
 }
+
+.fade-enter-from,
+.fade-leave-to {
+	opacity: 0;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+	transition: opacity 0.3s ease-out;
+}
